// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Firefox Scrollbar returns css for a custom firefox scrollbar 1`] = `
"
  scrollbar-color: fuchsia cyan;
  scrollbar-width: thin;"
`;

exports[`Scrollbar Integration returns css for a custom scrollbar with custom values 1`] = `
"
    
  ::-webkit-scrollbar {
    height: 30px;
  }
    
  ::-webkit-scrollbar-track {
    background: #ffffff;
  }
    
  ::-webkit-scrollbar-thumb {
    background: #dcdcdc;
    border: 4px solid transparent;
    border-radius: 26px;
    background-clip: content-box;
  }
    
  ::-webkit-scrollbar-thumb:hover {
    background: #4c85d8;
    border: 4px solid transparent;
    border-radius: 26px;
    background-clip: content-box;
  }
    
  scrollbar-color: #4c85d8 #ffffff;
  scrollbar-width: thin;
  "
`;

exports[`Scrollbar Integration returns css for a custom scrollbar with default values 1`] = `
"
    
  ::-webkit-scrollbar {
    width: 12px;
  }
    
  ::-webkit-scrollbar-track {
    background: #ffffff;
  }
    
  ::-webkit-scrollbar-thumb {
    background: #dcdcdc;
    border: 2px solid transparent;
    border-radius: 10px;
    background-clip: content-box;
  }
    
  ::-webkit-scrollbar-thumb:hover {
    background: #c1c1c1;
    border: 2px solid transparent;
    border-radius: 10px;
    background-clip: content-box;
  }
    
  scrollbar-color: #c1c1c1 #ffffff;
  scrollbar-width: thin;
  "
`;

exports[`formatThickness returns css for a horizontal scrollbar with a custom height 1`] = `
"
  ::-webkit-scrollbar {
    height: 25px;
  }"
`;

exports[`formatThickness returns css for vertical scrollbar with custom width 1`] = `
"
  ::-webkit-scrollbar {
    width: 20px;
  }"
`;

exports[`formatThumb returns css for a scrollbar thumb with a custom color, size and width 1`] = `
"
  ::-webkit-scrollbar-thumb {
    background: rebeccapurple;
    border: 2px solid transparent;
    border-radius: 8px;
    background-clip: content-box;
  }"
`;

exports[`formatThumbHover returns css for a scroll bar thumb with a custom hover 1`] = `
"
  ::-webkit-scrollbar-thumb:hover {
    background: firebrick;
    border: 8px solid transparent;
    border-radius: 17px;
    background-clip: content-box;
  }"
`;

exports[`formatTrackColor returns css for a scrollbar track with a custom color 1`] = `
"
  ::-webkit-scrollbar-track {
    background: tomato;
  }"
`;
